adding getTemperatureData + date filtering
